--- a/recipes/bbq-ribs.css
+++ b/recipes/bbq-ribs.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
-    margin: 0px 300px;
+    margin: 0px 200px 20px 200px;
 }
 header {
     color: #ffffff;
