arranging layout for buttered_noodels.html and giving it a consistent theme

--- a/recipes/buttered_noodles.css
+++ b/recipes/buttered_noodles.css
@@ -1,14 +1,29 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+    margin: 0px 200px 20px 200px;
 }
 header {
     color: #ffffff;
 }
 header, footer {
-    background-color: #f3f70e;
+    background-color: #2f5a787d;
     text-align: center;
+}
+.mainh1 {
+    color: #2F5A78;
+    padding-bottom: 2px;
+    border-bottom: 1px solid #2F5A78;
+    text-align: center;
+}
+h2 {
+    color: #2F5A78;
+    font-size: 25px;
+    padding-bottom: 2px;
+    border-bottom: 1px solid #2F5A78;
 }
 img {
     width: 400px;
     height: auto;
+    margin: 0px 270px;
 }
