--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
     text-align: center;
-    margin: 60px 200px 50px 200px;
+    margin: 60px 10%;
     border: 1px solid #2F5A78;
     padding-bottom: 20px;
 }
@@ -16,7 +16,7 @@ li {
     margin: auto 350px;
 }
 img {
-    width: 600px;
+    width: 100%;
     height: auto;
     margin-bottom: 20px;
 }
