--- a/recipes/bbq-ribs.css
+++ b/recipes/bbq-ribs.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
-    margin: 0px 200px 20px 200px;
+    margin: 60px 10%;
 }
 header {
     color: #ffffff;
@@ -23,7 +23,7 @@ h2 {
     border-bottom: 1px solid #2F5A78;
 }
 img {
-    width: 350px;
+    width: 100%;
     height: auto;
-    margin: 0px 300px;
+    margin-bottom: 20px;
 }
