--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
     box-sizing: border-box;
     text-align: center;
     margin: 60px 10%;
-    border: 1px solid #2F5A78;
+    border: 1px solid #2f5a787d;
     padding-bottom: 20px;
 }
 
